--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-query": "^1.2.9",
+    "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.22",
     "framer-motion": "^6.2.6",
     "react": "^17.0.2",
@@ -18,6 +19,7 @@
     "react-query": "^3.34.15",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "recoil": "^0.6.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
