--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "xflix",
   "version": "0.1.0",
+  "homepage": "https://cj-k-7.github.io/XFLIX/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
@@ -14,6 +15,7 @@
     "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.22",
     "framer-motion": "^6.2.6",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.15",
@@ -29,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
