--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.1",
     "react-query": "^3.34.15",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
